# element-of-the-day

./: README.md  accsempai.csv  atomic_number.csv  nowohyeah.csv  plot.html  plot.py  pyproject.toml
.github/workflows/: python-app.yml
docs/: index.html  plot.html
